cpp/robot-simulator/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.013s
user	0m0.002s
sys	0m0.011s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
[ 25%] Building CXX object CMakeFiles/robot-simulator.dir/robot_simulator_test.cpp.o
[ 50%] Building CXX object CMakeFiles/robot-simulator.dir/robot_simulator.cpp.o
[ 75%] Building CXX object CMakeFiles/robot-simulator.dir/test/tests-main.cpp.o
[100%] Linking CXX executable robot-simulator
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
[100%] Built target robot-simulator
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
===============================================================================
All tests passed (36 assertions in 18 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
[100%] Built target test_robot-simulator
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/robot-simulator.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/robot-simulator.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)9328"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
robot_simulator.cpp                           64      64   100%   
robot_simulator.h                              1       1   100%   
robot_simulator_test.cpp                     158     158   100%   
test/catch.hpp                                40      27    67%   1580-1581,1593-1594,1628,1630,1642-1643,1647-1648,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        263     250    95%
------------------------------------------------------------------------------
lines: 95.1% (250 out of 263)
branches: 39.9% (272 out of 681)

real	0m9.500s
user	0m8.618s
sys	0m0.873s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.264s
user	0m0.182s
sys	0m0.085s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.158s
user	0m0.119s
sys	0m0.040s

===============================================================================

Running: clang-format-16 -style=file -i ./robot_simulator.cpp ./robot_simulator_test.cpp ./robot_simulator.h

real	0m0.022s
user	0m0.012s
sys	0m0.010s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./robot_simulator.cpp ./robot_simulator_test.cpp ./robot_simulator.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/robot_simulator.h:4:10: fatal error: 'string' file not found
#include <string>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/robot_simulator.h.

real	0m0.545s
user	0m0.511s
sys	0m0.034s


real	0m0.547s
user	0m0.512s
sys	0m0.035s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11555 warnings generated.
46957 warnings generated.
46957 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/robot_simulator.h.
Suppressed 46961 warnings (46956 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.474s
user	0m6.414s
sys	0m0.059s
Running: clang-tidy-16 ./robot_simulator.cpp ./robot_simulator_test.cpp ./robot_simulator.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/robot_simulator.h:4:10: error: 'string' file not found [clang-diagnostic-error]
#include <string>
         ^~~~~~~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/robot-simulator/robot_simulator_test.cpp:14:17: warning: variable name 'r' is too short, expected at least 3 characters [readability-identifier-length]
    const Robot r;
                ^


real	0m6.476s
user	0m6.417s
sys	0m0.059s

===============================================================================

